# Games

SnakeGamee/: CMakeLists.txt
SnakeGamee/header/: game.hpp  gameObject.hpp  shader.hpp  snake.hpp
SnakeGamee/resources/shaders/: fragment.txt  vertex.txt
SnakeGamee/src/: main.cpp
